<resources>
    <string name="app_name">CosmoBitcoins</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_new_amount">Set new invested amount</string>
    <string name="action_refresh">Refresh</string>
    <string name="title">Account balance</string>
    <string name="last_btc_price">Last BTC price:</string>
    <string name="ask">Ask:</string>
    <string name="bid">Bid:</string>
    <string name="bid_ask_difference">Bid-Ask:</string>
    <string name="btc_available">BTC available:</string>
    <string name="mxn_available">MXN available:</string>
    <string name="btc_if_buy">BTC if buy:</string>
    <string name="mxn_if_sell">MXN if sell:</string>
    <string name="default_quantity">0</string>
    <string name="last_update">Last updated:</string>
    <string name="invested_money">Invested:</string>
    <string name="earnings">Earnings:</string>
    <string name="change">Change:</string>
    <string name="input_invested_value_msg_toast">Enter the invested amount</string>
    <string name="input_button_text_positive">Set value</string>
    <string name="input_button_text_negative">Cancel</string>

    <string name="invested_amount_stored">invested_amount_stored</string>
    <string name="invested_amount_default">0</string>
</resources>
